# cscript

./: CMakeLists.txt  README.md
examples/host/: main.c
examples/script/: example_script.c
include/: cscript.h  cscript_export.h  cscript_log.h  cscript_platform.h  cscript_watcher.h
source/: cscript.c  cscript_log.c  cscript_platform_posix.c  cscript_platform_win.c  cscript_watcher_posix.c  cscript_watcher_win.c
